--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
       <div class="border"></div>
       <p class="paragraph-3">If you can&#x27;t find an answer to your question on our website, please reach out to us on Discord. We&#x27;ll help you find the answer!</p>
       <div data-w-id="9d737d72-a2c7-31ac-8046-a32e14b84ba7" class="link-join-discord faq-banner">
-        <a href="#https://discord.com/invite/5DGZ7rzSfS" target="_blank" class="link-discord">Join Discord</a><img src="images/icon-arrow.svg" loading="lazy" width="70" alt="" class="arrow">
+        <a href="https://discord.com/invite/5DGZ7rzSfS" target="_blank" class="link-discord">Join Discord</a><img src="images/icon-arrow.svg" loading="lazy" width="70" alt="" class="arrow">
       </div>
     </div>
     <div class="empty-block"></div>
