--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <a href="#FAQ" class="content hamburger w-nav-link">FAQ</a>
           </nav>
           <div class="icons-container">
-            <a href="https://mirror.xyz/0x0641bc55DDAb3b9636e82CbF87EDE3c3c533039d/GkbH1xqXuhiKMR2hmiLNhq_UqEG30PD9udkC1g6nJ9Y" target="_blank" class="link w-inline-block">
+            <a href="https://mirror.xyz/0x0641bc55DDAb3b9636e82CbF87EDE3c3c533039d" target="_blank" class="link w-inline-block">
               <div class="icon-container-header"><img src="images/mirror.svg" loading="lazy" width="10" alt="" class="image-icon"></div>
             </a>
             <a href="https://github.com/DeDeLend" target="_blank" class="link w-inline-block">
@@ -264,7 +264,7 @@
     <a href="https://github.com/DeDeLend" target="_blank" class="link-github w-inline-block">
       <div class="icon-container for-footer github"><img src="images/github.svg" loading="lazy" alt="" class="image-icon logo-github"></div>
     </a>
-    <a href="https://mirror.xyz/0x0641bc55DDAb3b9636e82CbF87EDE3c3c533039d/GkbH1xqXuhiKMR2hmiLNhq_UqEG30PD9udkC1g6nJ9Y#" target="_blank" class="link-mirror w-inline-block">
+    <a href="https://mirror.xyz/0x0641bc55DDAb3b9636e82CbF87EDE3c3c533039d" target="_blank" class="link-mirror w-inline-block">
       <div data-w-id="6028e2a5-4766-2036-7d1e-b380e2b2fdb1" class="icon-container for-footer"><img src="images/mirror.svg" loading="lazy" width="10" alt="" class="image-icon logo-mirror"></div>
     </a>
     <div class="offer-structure footer">
