--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
           <div class="divider-faq"></div>
           <div style="height:0vw;opacity:0;display:none" class="faq-answer">
             <div class="answer">
-              If you're having any trouble with Unified Trading Terminal, you can always manage your positions using the original GMX or GNS interface to handle your positions.
+              If you're having any trouble with Unified Trading Terminal, you can always manage your positions using the original GMX or GNS interfaces to handle your positions.
             </div>
           </div>
         </div>
