--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class="icon-container deep-liquidity"><img src="images/icon-chart.png" loading="lazy" width="11.5" alt="" class="image-drop"></div>
         <div class="txt-container">
           <h1 class="heading-4">DeDeLend is the new way to trade</h1>
-          <p class="content paragraph">Don&#x27;t get us wrong—CEX is a great with a lot of features. But it&#x27;s not all-inclusive, and its security has been called into question. Enter DeDeLend, which recreates the CEX trading experience on DeFi stack, allowing traders to use the best features like multi-collateral, cross-margin, and On-Chain API-Keys!</p>
+          <p class="content paragraph">While CEX has many great features, its security has been questioned, and it's not an all-inclusive platform. However, DeDeLend offers an alternative solution. It recreates the CEX trading experience on the DeFi stack, providing traders with access to excellent features such as multi-collateral, cross-margin, and On-Chain API-Keys.</p>
         </div>
       </div>
       <div data-w-id="f745919e-fb27-68ef-d491-db8103c0ac27" class="scheme">
