--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
       <div data-w-id="469be334-8297-ed70-b2b4-b35dcb219c2d" class="card-opportunities withoit-kys-aml"><img src="images/authorization.png" loading="lazy" width="540" sizes="(max-width: 479px) 47vw, (max-width: 767px) 26vw, (max-width: 1279px) 15vw, 12vw" srcset="images/authorization-p-500.png 500w, images/authorization-p-800.png 800w, images/authorization-p-1080.png 1080w, images/authorization.png 1080w" alt="" class="card-image">
         <div class="txt without-kys-aml">
           <h3 class="card-head">Without KYC/AML</h3>
-          <p class="content description">Trade direct from your wallet with no KYC/AML</p>
+          <p class="content description">Trade directly from your wallet with no KYC/AML</p>
         </div>
         <div class="bottom-container"><img src="images/Line.svg" loading="lazy" width="71" alt="" class="line"><img src="images/steps-1.svg" loading="lazy" width="29.5" alt="" class="image-steps"></div><img src="images/ellipses.svg" loading="lazy" width="70" alt="" class="ellipses">
       </div>
