--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <div class="point-txt">Effortlessly find the most cost-effective option</div>
         </div>
         <div data-w-id="054a02a3-1f86-0cbe-54e9-0ab370ce3182" class="link-trade">
-          <a href="/app.html/#/options" class="txt-link">Trade Options</a><img src="images/icon-arrow.svg" loading="lazy" width="70" alt="" class="arrow">
+          <a href="/app.html#/options" class="txt-link">Trade Options</a><img src="images/icon-arrow.svg" loading="lazy" width="70" alt="" class="arrow">
         </div>
       </div><img src="images/available-options.png" loading="lazy" width="70" sizes="(max-width: 479px) 75vw, (max-width: 767px) 86vw, (max-width: 991px) 63vw, (max-width: 1439px) 42vw, (max-width: 1919px) 37vw, 34vw" srcset="images/available-options.png 500w, images/available-options.png 800w, images/available-options.png 1080w, images/available-options.png 1600w" alt="" class="image-options">
       <div class="interface"><img src="images/icon-interface.svg" loading="lazy" width="70" alt="" class="icon-benefits">
@@ -111,7 +111,7 @@
           <div class="point-txt">Supports Limit, Take Profit, and Stop-Loss Orders</div>
         </div>
         <div data-w-id="fe89084e-5918-c061-a7c1-ad0b19af5138" class="link-trade">
-          <a href="/app.html/#/perpetuals" class="txt-link">Trade Perpetuals</a><img src="images/icon-arrow.svg" loading="lazy" width="70" alt="" class="arrow">
+          <a href="/app.html#/perpetuals" class="txt-link">Trade Perpetuals</a><img src="images/icon-arrow.svg" loading="lazy" width="70" alt="" class="arrow">
         </div>
       </div><img src="images/open-position.png" loading="lazy" width="70" sizes="(max-width: 479px) 75vw, (max-width: 767px) 45vw, (max-width: 991px) 34vw, (max-width: 1439px) 24vw, (max-width: 1919px) 21vw, 20vw" srcset="images/open-position-p-500.png 500w, images/open-position-p-800.png 800w, images/open-position-p-1080.png 1080w, images/open-position.png 1299w" alt="" class="image-perpetuals"><img src="images/arrow.svg" loading="lazy" width="22.5" alt="" class="image-arrow"><img src="images/easy-access.png" loading="lazy" width="70" sizes="(max-width: 767px) 34vw, (max-width: 991px) 25vw, (max-width: 1279px) 17vw, (max-width: 1439px) 15vw, (max-width: 1919px) 13vw, 10vw" srcset="images/easy-access-p-500.png 500w, images/easy-access.png 585w" alt="" class="image-luquidity-sources">
     </div>
