--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
           <div class="divider-faq"></div>
           <div style="height:0vw;opacity:0;display:none" class="faq-answer">
             <div class="answer">
-              Unified Trading Terminal allows you to trade on GMX or GNS without switching between interfaces.
+              The Unified Trading Terminal enables you to trade on GMX or GNS without having to switch between interfaces.
             </div>
           </div>
         </div>
@@ -182,7 +182,7 @@
           <div class="divider-faq"></div>
           <div style="height:0vw;opacity:0;display:none" class="faq-answer">
             <div class="answer">
-              We take zero fees, so you'll pay the same fees if you trade on the original interface, GMX or GNS.
+              We don't charge any fees, so you'll pay the same fees as if you were trading on the original GMX or GNS interfaces.
             </div>
           </div>
         </div>
@@ -196,7 +196,7 @@
           <div class="divider-faq"></div>
           <div style="height:0vw;opacity:0;display:none" class="faq-answer">
             <div class="answer">
-              We don't use any contracts. You interact directly with GMX's and GNS's contracts. We provide only an interface between you and the blockchain world.
+              We don't use any contracts. You interact directly with the contracts of GMX and GNS. We simply provide an interface between you and the blockchain world.
             </div>
           </div>
         </div>
@@ -210,7 +210,7 @@
           <div class="divider-faq"></div>
           <div style="height:0vw;opacity:0;display:none" class="faq-answer">
             <div class="answer">
-              If you're having any trouble with Unified Trading Terminal, you can always manage your positions using the original GMX or GNS interfaces to handle your positions.
+              If you experience any issues with the Unified Trading Terminal, you can always manage your positions using the original GMX or GNS interfaces.
             </div>
           </div>
         </div>
