--- a/detail_faq.html
+++ b/detail_faq.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Tue Mar 21 2023 09:21:13 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Mon May 29 2023 07:18:00 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63f2da7449b46c18c3c6a7b9" data-wf-site="63e9d9ed1b2d9e3868d35b1d">
 <head>
   <meta charset="utf-8">
@@ -17,7 +17,6 @@
         }
       });
     </script>
-  <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">
       ! function(o, c) {
         var n = c.documentElement,
@@ -31,6 +30,18 @@
 <body>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=63e9d9ed1b2d9e3868d35b1d" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
-  <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
+  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.9"></script>
+  <script>
+      var typed4 = new Typed('.typed-text', {
+        strings: ['Trade Perpetuals & Options', 'Check your summary', 'Follow the Best Traders'],
+        typeSpeed: 75,
+        backSpeed: 25,
+        bindInputFocusEvents: true,
+        loop: true,
+        cursorChar: '',
+        backDelay: 1000,
+        startDelay: 1000
+      });
+    </script>
 </body>
 </html>
