--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
           <h3 class="card-heading">Access To All Liquidity</h3>
           <p class="content description">DeDeLend consolidates liquidity from multiple markets. You can divide positions between two markets if there isn&#x27;t sufficient liquidity in either one</p>
         </div>
-        <div class="bottom-container"><img src="images/Line.svg" loading="lazy" width="71" alt="" class="line"><img src="images/steps.svg" loading="lazy" width="29.5" alt="" class="image-steps"></div>
+        <div class="bottom-container"><img src="images/Line.svg" loading="lazy" width="71" alt="" class="line"><img src="images/step-1.svg" loading="lazy" width="29.5" alt="" class="image-steps"></div>
         <div class="grain-overlay bg-card"></div>
       </div>
       <div style="-webkit-transform:translate3d(0, 5vw, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 5vw, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 5vw, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 5vw, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="card-opportunities"><img src="images/design.png" loading="lazy" width="540" sizes="(max-width: 479px) 47vw, (max-width: 767px) 26vw, (max-width: 991px) 19vw, (max-width: 1279px) 13vw, (max-width: 1439px) 12vw, (max-width: 1919px) 14vw, 10vw" srcset="images/design-p-500.png 500w, images/design-p-800.png 800w, images/design-p-1080.png 1080w, images/design.png 1080w" alt="" class="card-image">
@@ -230,7 +230,7 @@
           <h3 class="card-heading">Simple UX</h3>
           <p class="content description">You won’t have to open 2-3 different interfaces to find the best price and the deepest liquidity to execute trades. You’ll be able to do it all from one place!</p>
         </div>
-        <div class="bottom-container"><img src="images/Line.svg" loading="lazy" width="71" alt="" class="line"><img src="images/steps_1.svg" loading="lazy" width="29.5" alt="" class="image-steps"></div><img src="images/ellipses.svg" loading="lazy" width="70" alt="" class="ellipses">
+        <div class="bottom-container"><img src="images/Line.svg" loading="lazy" width="71" alt="" class="line"><img src="images/step-2.svg" loading="lazy" width="29.5" alt="" class="image-steps"></div><img src="images/ellipses.svg" loading="lazy" width="70" alt="" class="ellipses">
         <div class="grain-overlay bg-card"></div>
       </div>
       <div class="card-opportunities withoit-kys-aml"><img src="images/authorization.png" loading="lazy" width="540" sizes="(max-width: 479px) 47vw, (max-width: 767px) 26vw, (max-width: 991px) 19vw, (max-width: 1279px) 13vw, (max-width: 1439px) 12vw, (max-width: 1919px) 14vw, 10vw" srcset="images/authorization-p-500.png 500w, images/authorization-p-800.png 800w, images/authorization-p-1080.png 1080w, images/authorization.png 1080w" alt="" class="card-image">
@@ -238,7 +238,7 @@
           <h3 class="card-heading">Without KYC/AML</h3>
           <p class="content description">Trade directly from your wallet without KYC/AML requirements</p>
         </div>
-        <div class="bottom-container"><img src="images/Line.svg" loading="lazy" width="71" alt="" class="line"><img src="images/steps-1.svg" loading="lazy" width="29.5" alt="" class="image-steps"></div><img src="images/ellipses.svg" loading="lazy" width="70" alt="" class="ellipses">
+        <div class="bottom-container"><img src="images/Line.svg" loading="lazy" width="71" alt="" class="line"><img src="images/step-3.svg" loading="lazy" width="29.5" alt="" class="image-steps"></div><img src="images/ellipses.svg" loading="lazy" width="70" alt="" class="ellipses">
         <div class="grain-overlay bg-card"></div>
       </div>
     </div>
