--- a/index.html
+++ b/index.html
@@ -62,22 +62,22 @@
             <a href="#FAQ" class="content hamburger w-nav-link">FAQ</a>
           </nav>
           <div class="icons-container">
-            <a href="https://medium.com/@dedelend" target="_blank" class="link w-inline-block">
+            <a href="https://medium.com/@dedelend" target="_blank" rel="noreferrer" class="link w-inline-block">
               <div class="icon-container-header"><img src="images/medium.svg" loading="lazy" width="10" alt="" class="image-icon"></div>
             </a>
-            <a href="https://github.com/DeDeLend" target="_blank" class="link w-inline-block">
+            <a href="https://github.com/DeDeLend" target="_blank" rel="noreferrer" class="link w-inline-block">
               <div class="icon-container-header"><img src="images/github.svg" loading="lazy" alt="" class="image-icon"></div>
             </a>
-            <a href="https://docs.dedelend.co/" target="_blank" class="link w-inline-block">
+            <a href="https://docs.dedelend.co/" target="_blank" rel="noreferrer" class="link w-inline-block">
               <div class="icon-container-header"><img src="images/gitbook.svg" loading="lazy" alt="" class="image-icon"></div>
             </a>
-            <a href="https://twitter.com/DeDeLend" target="_blank" class="link w-inline-block">
+            <a href="https://twitter.com/DeDeLend" target="_blank" rel="noreferrer" class="link w-inline-block">
               <div class="icon-container-header"><img src="images/twitter.svg" loading="lazy" alt="" class="image-icon"></div>
             </a>
-            <a href="https://discord.com/invite/5DGZ7rzSfS" target="_blank" class="link w-inline-block">
+            <a href="https://discord.com/invite/5DGZ7rzSfS" target="_blank" rel="noreferrer" class="link w-inline-block">
               <div class="icon-container-header"><img src="images/discord.svg" loading="lazy" alt="" class="image-icon"></div>
             </a>
-            <a href="https://t.me/DeDeLend" target="_blank" class="link w-inline-block">
+            <a href="https://t.me/DeDeLend" target="_blank" rel="noreferrer" class="link w-inline-block">
               <div class="icon-container-header"><img src="images/telegram.svg" loading="lazy" alt="" class="image-icon"></div>
             </a>
           </div>
@@ -89,7 +89,7 @@
       <h1 class="sub-heading">In Unified Trading Terminal</h1>
     </div>
     <div class="grain-overlay"></div>
-    <a data-w-id="f2214f80-6fec-56d0-e975-503eb3989342" href="https://dedelend.co/app.html#/terminal/options" target="_blank" class="btn-open w-inline-block">
+    <a data-w-id="f2214f80-6fec-56d0-e975-503eb3989342" href="https://dedelend.co/app.html#/terminal/options" target="_blank" rel="noreferrer" class="btn-open w-inline-block">
       <div class="link-btn-txt">Open app</div>
       <div class="link-btn-txt bottom-text">Open app</div>
     </a>
@@ -116,7 +116,7 @@
           <div class="point-txt">We believe in full transparency and don&#x27;t charge any additional fee</div>
         </div>
         <div data-w-id="054a02a3-1f86-0cbe-54e9-0ab370ce3182" class="link-trade option">
-          <a href="#https://discord.com/invite/5DGZ7rzSfS" target="_blank" class="txt-link options">Trade Options</a><img src="images/icon-arrow.svg" loading="lazy" width="70" alt="" class="arrow options">
+          <a href="#https://discord.com/invite/5DGZ7rzSfS" target="_blank" rel="noreferrer" class="txt-link options">Trade Options</a><img src="images/icon-arrow.svg" loading="lazy" width="70" alt="" class="arrow options">
         </div>
       </div><img src="images/position-builder.png" loading="lazy" width="70" sizes="(max-width: 479px) 87vw, (max-width: 767px) 72vw, (max-width: 991px) 58vw, (max-width: 1279px) 48vw, (max-width: 1439px) 53vw, (max-width: 1919px) 49vw, 42vw" srcset="images/position-builder-p-500.png 500w, images/position-builder-p-800.png 800w, images/position-builder-p-1080.png 1080w, images/position-builder-p-1600.png 1600w, images/position-builder-p-2000.png 2000w, images/position-builder-p-2600.png 2600w, images/position-builder.png 2720w" alt="" class="image-options">
       <div style="display:none;opacity:0;-webkit-transform:translate3d(0, 0, 0) scale3d(0, 0, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(0, 0, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(0, 0, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(0, 0, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="tooltip options-aggregator">
@@ -134,7 +134,7 @@
           <div class="point-txt">Set up a take-profit or stop-loss order</div>
         </div>
         <div data-w-id="0350a095-47e9-8314-8dd1-b58824972399" class="link-trade">
-          <a href="https://dedelend.co/app.html#/terminal/options" target="_blank" class="txt-link">Trade Options</a><img src="images/icon-arrow.svg" loading="lazy" width="70" alt="" class="arrow">
+          <a href="https://dedelend.co/app.html#/terminal/options" target="_blank" rel="noreferrer" class="txt-link">Trade Options</a><img src="images/icon-arrow.svg" loading="lazy" width="70" alt="" class="arrow">
         </div>
       </div><img src="images/fire.svg" loading="lazy" alt="" class="image-fire"><img src="images/take-profit.png" loading="lazy" width="70" sizes="(max-width: 767px) 53vw, (max-width: 991px) 39vw, (max-width: 1279px) 26vw, (max-width: 1439px) 25vw, (max-width: 1919px) 24vw, 18vw" srcset="images/take-profit-p-500.png 500w, images/take-profit.png 680w" alt="" class="image-take-profit"><img src="images/stop-loss.png" loading="lazy" sizes="(max-width: 767px) 53vw, (max-width: 991px) 39vw, (max-width: 1279px) 26vw, (max-width: 1919px) 25vw, 18vw" srcset="images/stop-loss-p-500.png 500w, images/stop-loss.png 680w" alt="" class="image-stop-loss">
     </div>
@@ -149,7 +149,7 @@
           <div class="point-txt">Supports Limit orders</div>
         </div>
         <div data-w-id="7e844903-fc8e-f0d0-d369-cfab442f69ee" class="link-trade perp">
-          <a href="https://dedelend.co/app.html#/terminal/perpetuals" target="_blank" class="txt-link">Trade Perpetuals</a><img src="images/icon-arrow.svg" loading="lazy" width="70" alt="" class="arrow">
+          <a href="https://dedelend.co/app.html#/terminal/perpetuals" target="_blank" rel="noreferrer" class="txt-link">Trade Perpetuals</a><img src="images/icon-arrow.svg" loading="lazy" width="70" alt="" class="arrow">
         </div>
       </div><img src="images/open-position.png" loading="lazy" width="70" sizes="(max-width: 479px) 47vw, (max-width: 767px) 40vw, (max-width: 991px) 30vw, (max-width: 1279px) 20vw, (max-width: 1439px) 24vw, (max-width: 1919px) 21vw, 17vw" srcset="images/open-position-p-500.png 500w, images/open-position-p-800.png 800w, images/open-position.png 866w" alt="" class="image-open-position"><img src="images/easy-access.png" loading="lazy" width="70" sizes="(max-width: 479px) 25vw, (max-width: 767px) 28vw, (max-width: 991px) 21vw, (max-width: 1279px) 14vw, (max-width: 1439px) 15vw, (max-width: 1919px) 13vw, 10vw" srcset="images/easy-access-p-500.png 500w, images/easy-access.png 585w" alt="" class="image-access"><img src="images/arrow.svg" loading="lazy" width="70" alt="" class="image-arrow">
     </div>
@@ -164,7 +164,7 @@
           <div class="point-txt">Regardless of where you trade, we compile all data in one place</div>
         </div>
         <div data-w-id="3f234bbc-3a8f-9077-381f-2a2b3c8bd001" class="link-trade">
-          <a href="https://dedelend.co/app.html#/terminal/profile" target="_blank" class="txt-link">See User Profile</a><img src="images/icon-arrow.svg" loading="lazy" width="70" alt="" class="arrow">
+          <a href="https://dedelend.co/app.html#/terminal/profile" target="_blank" rel="noreferrer" class="txt-link">See User Profile</a><img src="images/icon-arrow.svg" loading="lazy" width="70" alt="" class="arrow">
         </div>
       </div><img src="images/history.png" loading="lazy" width="70" sizes="(max-width: 479px) 87vw, (max-width: 767px) 66vw, (max-width: 991px) 53vw, (max-width: 1279px) 39vw, (max-width: 1439px) 43vw, (max-width: 1919px) 41vw, 35vw" srcset="images/history-p-500.png 500w, images/history-p-800.png 800w, images/history-p-1080.png 1080w, images/history.png 1314w" alt="" class="image-history"><img src="images/history-transaction.png" loading="lazy" width="70" sizes="(max-width: 479px) 87vw, (max-width: 767px) 66vw, (max-width: 991px) 53vw, (max-width: 1279px) 39vw, (max-width: 1439px) 43vw, (max-width: 1919px) 41vw, 35vw" srcset="images/history-transaction-p-500.png 500w, images/history-transaction-p-800.png 800w, images/history-transaction-p-1080.png 1080w, images/history-transaction.png 1330w" alt="" class="image-transaction">
       <div class="transaction-heading">Transaction History</div>
@@ -180,7 +180,7 @@
           <div class="point-txt">All information is derived from on-chain data across various trading platforms</div>
         </div>
         <div data-w-id="469bafad-f1e5-1907-0ad7-5c6915f60807" class="link-analytics">
-          <a href="#https://discord.com/invite/5DGZ7rzSfS" target="_blank" class="txt-link-analytics">See Analytics</a><img src="images/icon-arrow.svg" loading="lazy" width="70" alt="" class="arrow-analytics">
+          <a href="#https://discord.com/invite/5DGZ7rzSfS" target="_blank" rel="noreferrer" class="txt-link-analytics">See Analytics</a><img src="images/icon-arrow.svg" loading="lazy" width="70" alt="" class="arrow-analytics">
         </div>
       </div><img src="images/overall-liquidated.png" loading="lazy" width="665" sizes="(max-width: 479px) 47vw, (max-width: 767px) 33vw, (max-width: 991px) 31vw, (max-width: 1279px) 22vw, (max-width: 1439px) 23vw, (max-width: 1919px) 22vw, 18vw" srcset="images/overall-liquidated-p-500.png 500w, images/overall-liquidated-p-800.png 800w, images/overall-liquidated-p-1080.png 1080w, images/overall-liquidated.png 1330w" alt="" class="image-overall"><img src="images/total-trading-volume.png" loading="lazy" width="195" alt="" class="total-volume"><img src="images/open-interest.png" loading="lazy" width="250" sizes="(max-width: 479px) 47vw, (max-width: 767px) 33vw, (max-width: 991px) 31vw, (max-width: 1279px) 22vw, (max-width: 1439px) 23vw, (max-width: 1919px) 22vw, 18vw" srcset="images/open-interest-p-500.png 500w, images/open-interest-p-800.png 800w, images/open-interest-p-1080.png 1080w, images/open-interest.png 1330w" alt="" class="image-open-interest">
       <div style="display:none;opacity:0;-webkit-transform:translate3d(0, 0, 0) scale3d(0, 0, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(0, 0, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(0, 0, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(0, 0, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="tooltip analytics">
@@ -253,7 +253,7 @@
           <div class="user-info">
             <div class="user-info-name">
               <h3 class="name-heading">0xRΞptar.eth</h3>
-              <a href="https://twitter.com/reptar258" target="_blank" class="social-media-link">@reptar258<br></a>
+              <a href="https://twitter.com/reptar258" target="_blank" rel="noreferrer" class="social-media-link">@reptar258<br></a>
             </div><img width="70" loading="lazy" src="images/review-pic1.png" alt="" class="review-photo">
           </div>
           <div class="txt-review">
@@ -265,7 +265,7 @@
           <div class="user-info">
             <div class="user-info-name">
               <h3 class="name-heading">Hunter</h3>
-              <a href="https://twitter.com/DeFiDerivatives" target="_blank" class="social-media-link">@DeFiDerivatives<br></a>
+              <a href="https://twitter.com/DeFiDerivatives" target="_blank" rel="noreferrer" class="social-media-link">@DeFiDerivatives<br></a>
             </div><img width="70" loading="lazy" src="images/review-pic2.jpeg" alt="" class="review-photo">
           </div>
           <div class="txt-review">
@@ -276,7 +276,7 @@
         <div style="-webkit-transform:translate3d(0, 5vw, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 5vw, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 5vw, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 5vw, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="slide w-slide">
           <div class="user-info">
             <div class="user-info-name">
-              <a href="https://twitter.com/JamesCliffyz" target="_blank" class="social-media-link">@JamesCliffyz</a>
+              <a href="https://twitter.com/JamesCliffyz" target="_blank" rel="noreferrer" class="social-media-link">@JamesCliffyz</a>
               <h3 class="name-heading">Shogun</h3>
             </div><img width="70" loading="lazy" src="images/review-pic3.jpeg" alt="" class="review-photo">
           </div>
@@ -288,7 +288,7 @@
         <div style="-webkit-transform:translate3d(0, 5vw, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 5vw, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 5vw, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 5vw, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="slide w-slide">
           <div class="user-info">
             <div class="user-info-name">
-              <a href="https://discord.com/channels/@me/1111521365976166423" target="_blank" class="social-media-link">@<strong>br0k3</strong></a>
+              <a href="https://discord.com/channels/@me/1111521365976166423" target="_blank" rel="noreferrer" class="social-media-link">@<strong>br0k3</strong></a>
               <h3 class="name-heading">br0k3</h3>
             </div><img width="70" loading="lazy" src="images/review-pic4.webp" alt="" class="review-photo">
           </div>
@@ -368,7 +368,7 @@
     <div data-w-id="906aa7c0-b69a-842d-5f16-667c54033aa7" style="-webkit-transform:translate3d(0, 5vw, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 5vw, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 5vw, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 5vw, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="banner">
       <p class="diccord-paragraph">If you can&#x27;t find an answer to your question on our website, please contact us on Discord. We&#x27;ll help you find the answer!</p>
       <div data-w-id="9d737d72-a2c7-31ac-8046-a32e14b84ba7" class="link-join-discord faq-banner">
-        <a href="https://discord.com/invite/5DGZ7rzSfS" target="_blank" class="txt-link">Join Discord</a><img src="images/icon-arrow.svg" loading="lazy" width="70" alt="" class="arrow">
+        <a href="https://discord.com/invite/5DGZ7rzSfS" target="_blank" rel="noreferrer" class="txt-link">Join Discord</a><img src="images/icon-arrow.svg" loading="lazy" width="70" alt="" class="arrow">
       </div>
       <div class="border"></div>
     </div>
@@ -376,32 +376,32 @@
   </div>
   <div class="footer wf-section">
     <div class="divider"></div>
-    <a href="https://t.me/DeDeLend" target="_blank" class="link-telegram w-inline-block">
+    <a href="https://t.me/DeDeLend" target="_blank" rel="noreferrer" class="link-telegram w-inline-block">
       <div data-w-id="5ab88794-0b15-37c8-290a-92912dd628a0" class="icon-container for-footer telegram"><img src="images/telegram.svg" loading="lazy" alt="" class="image-icon logo-telegram">
         <div class="grain-overlay-icons"></div>
       </div>
     </a>
-    <a href="https://discord.com/invite/5DGZ7rzSfS" target="_blank" class="link-discord1 w-inline-block">
+    <a href="https://discord.com/invite/5DGZ7rzSfS" target="_blank" rel="noreferrer" class="link-discord1 w-inline-block">
       <div data-w-id="2a1950f3-4f17-8488-6375-cb1a2f4dfa4a" class="icon-container for-footer discord"><img src="images/discord.svg" loading="lazy" alt="" class="image-icon logo-discord">
         <div class="grain-overlay-icons"></div>
       </div>
     </a>
-    <a href="https://twitter.com/DeDeLend" target="_blank" class="link-twitter w-inline-block">
+    <a href="https://twitter.com/DeDeLend" target="_blank" rel="noreferrer" class="link-twitter w-inline-block">
       <div data-w-id="b475eaa9-e0a4-40c2-bbbc-946e34b9f4d3" class="icon-container for-footer twitter"><img src="images/twitter.svg" loading="lazy" alt="" class="image-icon logo-twitter">
         <div class="grain-overlay-icons"></div>
       </div>
     </a>
-    <a href="https://github.com/DeDeLend" target="_blank" class="link-github w-inline-block">
+    <a href="https://github.com/DeDeLend" target="_blank" rel="noreferrer" class="link-github w-inline-block">
       <div class="icon-container for-footer github"><img src="images/github.svg" loading="lazy" alt="" class="image-icon logo-github">
         <div class="grain-overlay-icons"></div>
       </div>
     </a>
-    <a href="https://docs.dedelend.co/" target="_blank" class="link-gitbook w-inline-block">
+    <a href="https://docs.dedelend.co/" target="_blank" rel="noreferrer" class="link-gitbook w-inline-block">
       <div data-w-id="6028e2a5-4766-2036-7d1e-b380e2b2fdb1" class="icon-container for-footer"><img src="images/gitbook.svg" loading="lazy" width="10" alt="" class="image-icon logo-mirror">
         <div class="grain-overlay-icons"></div>
       </div>
     </a>
-    <a href="https://medium.com/@dedelend" target="_blank" class="link-medium w-inline-block">
+    <a href="https://medium.com/@dedelend" target="_blank" rel="noreferrer" class="link-medium w-inline-block">
       <div data-w-id="fdb40235-4727-d634-dce4-64af99d129b9" class="icon-container for-footer"><img src="images/medium.svg" loading="lazy" width="10" alt="" class="image-icon logo-mirror">
         <div class="grain-overlay-icons"></div>
       </div>
@@ -411,7 +411,7 @@
       <h1 class="footer-heading small">Perpetuals &amp; Options</h1>
     </div>
     <div class="txt-copyright">@All rights reserved. DeDeLend 2023</div>
-    <a data-w-id="7fbf7d98-aff3-a68f-9d9d-c8c6b625ffbf" href="https://dedelend.co/app.html#/terminal/options" target="_blank" class="btn-open footer w-inline-block">
+    <a data-w-id="7fbf7d98-aff3-a68f-9d9d-c8c6b625ffbf" href="https://dedelend.co/app.html#/terminal/options" target="_blank" rel="noreferrer" class="btn-open footer w-inline-block">
       <div class="link-btn-txt">Open app</div>
       <div class="link-btn-txt bottom-text">Open app</div>
     </a>
