--- a/index.html
+++ b/index.html
@@ -296,28 +296,14 @@
         <div role="listitem" class="faq-wrapper w-dyn-item">
           <div data-w-id="14ac175a-5207-3ab2-b0ae-1451c2179979" class="faq-trigger">
             <div class="question">
-              What is Unified Trading Terminal?
+              What is DeDeLend?
             </div>
             <div class="faq-button"><img src="images/arrow.svg" loading="lazy" width="11" alt="" class="faq-chevron"></div>
           </div>
           <div class="divider-faq"></div>
           <div style="height:0vw;opacity:0;display:none" class="faq-answer">
             <div class="answer">
-              The Unified Trading Terminal enables you to trade on GMX or GNS without having to switch between interfaces.
-            </div>
-          </div>
-        </div>
-        <div role="listitem" class="faq-wrapper w-dyn-item">
-          <div data-w-id="14ac175a-5207-3ab2-b0ae-1451c2179979" class="faq-trigger">
-            <div class="question">
-              Does DeDeLend take any fees?
-            </div>
-            <div class="faq-button"><img src="images/arrow.svg" loading="lazy" width="11" alt="" class="faq-chevron"></div>
-          </div>
-          <div class="divider-faq"></div>
-          <div style="height:0vw;opacity:0;display:none" class="faq-answer">
-            <div class="answer">
-              We don't charge any fees, so you'll pay the same fees as if you were trading on the original GMX or GNS interfaces.
+              DeDeLend is an options aggregator that offers a wide range of instruments. Users can effortlessly construct any option strategy and purchase it in a single transaction, as well as set up take-profit or stop-loss orders.
             </div>
           </div>
         </div>
@@ -331,21 +317,35 @@
           <div class="divider-faq"></div>
           <div style="height:0vw;opacity:0;display:none" class="faq-answer">
             <div class="answer">
-              We don't use any contracts. You interact directly with the contracts of GMX and GNS. We simply provide an interface between you and the blockchain world.
+              Our contracts have not been audited. As DeDeLend is currently in its beta phase, we ask that you keep this in mind. We cannot guarantee refunds in the event of lost funds, but if you encounter any issues, please do not hesitate to contact us via Discord or Twitter.
             </div>
           </div>
         </div>
         <div role="listitem" class="faq-wrapper w-dyn-item">
           <div data-w-id="14ac175a-5207-3ab2-b0ae-1451c2179979" class="faq-trigger">
             <div class="question">
-              What if I have a problem with Unified Trading Terminal?
+              What if I have a problem with DeDeLend?
             </div>
             <div class="faq-button"><img src="images/arrow.svg" loading="lazy" width="11" alt="" class="faq-chevron"></div>
           </div>
           <div class="divider-faq"></div>
           <div style="height:0vw;opacity:0;display:none" class="faq-answer">
             <div class="answer">
-              If you experience any issues with the Unified Trading Terminal, you can always manage your positions using the original GMX or GNS interfaces.
+              If you encounter any problems with DeDeLend, we encourage you to reach out to us through Discord or Twitter. We value your feedback and are here to assist you.
+            </div>
+          </div>
+        </div>
+        <div role="listitem" class="faq-wrapper w-dyn-item">
+          <div data-w-id="14ac175a-5207-3ab2-b0ae-1451c2179979" class="faq-trigger">
+            <div class="question">
+              Does DeDeLend charge any fees?
+            </div>
+            <div class="faq-button"><img src="images/arrow.svg" loading="lazy" width="11" alt="" class="faq-chevron"></div>
+          </div>
+          <div class="divider-faq"></div>
+          <div style="height:0vw;opacity:0;display:none" class="faq-answer">
+            <div class="answer">
+              No, DeDeLend does not charge any additional fees. You will pay the same price for options as you would on the original protocols.
             </div>
           </div>
         </div>
