--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html data-wf-page="63e9d9ed1b2d9e7d28d35b1e" data-wf-site="63e9d9ed1b2d9e3868d35b1d">
 <head>
   <meta charset="utf-8">
-  <title>DeDeLend</title>
+  <title>Sharwa.Finance</title>
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
-  <link href="css/dedelend.webflow.css" rel="stylesheet" type="text/css">
+  <link href="css/sharwa.finance.webflow.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
@@ -55,29 +55,26 @@
     <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease-out-quint" data-easing2="ease" role="banner" class="navbar w-nav">
       <div class="header-container">
         <div class="menu-button w-nav-button"><img src="images/icon-hamburger.svg" loading="lazy" width="10" alt="" class="icon-hamburger"></div>
-        <a href="#" class="logo-ddl w-nav-brand"><img src="images/DeDeLend.svg" loading="lazy" alt="" class="logo"></a>
+        <a href="#" class="logo-ddl w-nav-brand"><img src="images/Logo.svg" loading="lazy" alt="" class="logo"></a>
         <div class="links-container">
           <nav role="navigation" class="menu w-nav-menu">
             <a href="#opportunities" class="content hamburger w-nav-link">Opportunities</a>
             <a href="#FAQ" class="content hamburger w-nav-link">FAQ</a>
           </nav>
           <div class="icons-container">
-            <a href="https://medium.com/@dedelend" target="_blank" class="link w-inline-block">
-              <div class="icon-container-header"><img src="images/medium.svg" loading="lazy" width="10" alt="" class="image-icon"></div>
-            </a>
             <a href="https://github.com/DeDeLend" target="_blank" class="link w-inline-block">
               <div class="icon-container-header"><img src="images/github.svg" loading="lazy" alt="" class="image-icon"></div>
             </a>
-            <a href="https://docs.dedelend.co/" target="_blank" class="link w-inline-block">
+            <a href="https://docs.sharwa.finance/" target="_blank" class="link w-inline-block">
               <div class="icon-container-header"><img src="images/gitbook.svg" loading="lazy" alt="" class="image-icon"></div>
             </a>
-            <a href="https://twitter.com/DeDeLend" target="_blank" class="link w-inline-block">
+            <a href="https://twitter.com/SharwaFinance" target="_blank" class="link w-inline-block">
               <div class="icon-container-header"><img src="images/twitter.svg" loading="lazy" alt="" class="image-icon"></div>
             </a>
             <a href="https://discord.com/invite/5DGZ7rzSfS" target="_blank" class="link w-inline-block">
               <div class="icon-container-header"><img src="images/discord.svg" loading="lazy" alt="" class="image-icon"></div>
             </a>
-            <a href="https://t.me/DeDeLend" target="_blank" class="link w-inline-block">
+            <a href="https://t.me/SharwaFinance" target="_blank" class="link w-inline-block">
               <div class="icon-container-header"><img src="images/telegram.svg" loading="lazy" alt="" class="image-icon"></div>
             </a>
           </div>
@@ -89,8 +86,7 @@
       <h1 class="sub-heading">In Unified Trading Terminal</h1>
     </div>
     <div class="grain-overlay"></div>
-    <!-- CHANGE LINK TEST.DEDELEND -> DEDELEND -->
-    <a data-w-id="f2214f80-6fec-56d0-e975-503eb3989342" href="https://dedelend.co/app.html#/terminal/builder" target="_blank" class="btn-open w-inline-block">
+    <a data-w-id="f2214f80-6fec-56d0-e975-503eb3989342" href="https://sharwa.finance/app.html#/terminal/builder" target="_blank" class="btn-open w-inline-block">
       <div class="link-btn-txt">Open app</div>
       <div class="link-btn-txt bottom-text">Open app</div>
     </a>
@@ -104,7 +100,7 @@
   </div>
   <div class="about-aggregator wf-section">
     <div class="heading">
-      <h1 class="section-heading">What&#x27;s DeDeLend</h1>
+      <h1 class="section-heading">What&#x27;s Sharwa.Finance</h1>
     </div>
     <div data-w-id="936d5128-f43f-8acb-085c-7cc6b828b45d" class="card options-aggregator"><img src="images/deep-liquidity.png" loading="lazy" alt="" class="image-custom-strikes"><img src="images/no-fee.png" loading="lazy" width="70" alt="" class="image-fee"><img src="images/one-click.png" loading="lazy" width="70" alt="" class="image">
       <div class="txt-container options">
@@ -117,7 +113,7 @@
           <div class="point-txt">We believe in full transparency and don&#x27;t charge any additional fee</div>
         </div>
         <div data-w-id="36055265-9b9d-a559-a94d-8c0af07a6bae" class="link-trade">
-          <a href="https://dedelend.co/app.html#/terminal/builder" target="_blank" class="txt-link">Trade Options</a><img src="images/icon-arrow.svg" loading="lazy" width="70" alt="" class="arrow">
+          <a href="https://sharwa.finance/app.html#/terminal/builder" target="_blank" class="txt-link">Trade Options</a><img src="images/icon-arrow.svg" loading="lazy" width="70" alt="" class="arrow">
         </div>
       </div><img src="images/image-aggregator.png" loading="lazy" width="70" sizes="(max-width: 479px) 87vw, (max-width: 767px) 72vw, (max-width: 991px) 59vw, (max-width: 1279px) 48vw, (max-width: 1439px) 53vw, (max-width: 1919px) 49vw, 42vw" srcset="images/image-aggregator-p-500.png 500w, images/image-aggregator-p-800.png 800w, images/image-aggregator-p-1080.png 1080w, images/image-aggregator-p-1600.png 1600w, images/image-aggregator-p-2000.png 2000w, images/image-aggregator-p-2600.png 2600w, images/image-aggregator.png 2720w" alt="" class="image-options">
     </div>
@@ -132,7 +128,7 @@
           <div class="point-txt">Set up a take-profit or stop-loss order</div>
         </div>
         <div data-w-id="0350a095-47e9-8314-8dd1-b58824972399" class="link-trade">
-          <a href="https://dedelend.co/app.html#/terminal/positions" target="_blank" class="txt-link">Trade Options</a><img src="images/icon-arrow.svg" loading="lazy" width="70" alt="" class="arrow">
+          <a href="https://sharwa.finance/app.html#/terminal/positions" target="_blank" class="txt-link">Trade Options</a><img src="images/icon-arrow.svg" loading="lazy" width="70" alt="" class="arrow">
         </div>
       </div><img src="images/fire.svg" loading="lazy" alt="" class="image-fire"><img src="images/take-profit.png" loading="lazy" width="70" sizes="(max-width: 767px) 53vw, (max-width: 991px) 39vw, (max-width: 1279px) 26vw, (max-width: 1439px) 25vw, (max-width: 1919px) 24vw, 18vw" srcset="images/take-profit-p-500.png 500w, images/take-profit.png 680w" alt="" class="image-take-profit"><img src="images/stop-loss.png" loading="lazy" sizes="(max-width: 767px) 53vw, (max-width: 991px) 39vw, (max-width: 1279px) 26vw, (max-width: 1919px) 25vw, 18vw" srcset="images/stop-loss-p-500.png 500w, images/stop-loss.png 680w" alt="" class="image-stop-loss">
     </div>
@@ -147,7 +143,7 @@
           <div class="point-txt">Regardless of where you trade, we compile all data in one place</div>
         </div>
         <div data-w-id="3f234bbc-3a8f-9077-381f-2a2b3c8bd001" class="link-trade user-profile">
-          <a href="https://dedelend.co/app.html#/terminal/profile" target="_blank" class="txt-link-user-profile">See User Profile</a><img src="images/icon-arrow.svg" loading="lazy" width="70" alt="" class="arrow-user-profile">
+          <a href="https://sharwa.finance/app.html#/terminal/profile" target="_blank" class="txt-link-user-profile">See User Profile</a><img src="images/icon-arrow.svg" loading="lazy" width="70" alt="" class="arrow-user-profile">
         </div>
       </div><img src="images/history.png" loading="lazy" width="70" sizes="(max-width: 479px) 87vw, (max-width: 767px) 66vw, (max-width: 991px) 53vw, (max-width: 1279px) 39vw, (max-width: 1439px) 43vw, (max-width: 1919px) 41vw, 35vw" srcset="images/history-p-500.png 500w, images/history-p-800.png 800w, images/history-p-1080.png 1080w, images/history.png 1314w" alt="" class="image-history"><img src="images/history-transaction.png" loading="lazy" width="70" sizes="(max-width: 479px) 87vw, (max-width: 767px) 66vw, (max-width: 991px) 53vw, (max-width: 1279px) 39vw, (max-width: 1439px) 43vw, (max-width: 1919px) 41vw, 35vw" srcset="images/history-transaction-p-500.png 500w, images/history-transaction-p-800.png 800w, images/history-transaction-p-1080.png 1080w, images/history-transaction.png 1330w" alt="" class="image-transaction">
       <div class="transaction-heading">Transaction History</div>
@@ -206,7 +202,7 @@
       <div style="-webkit-transform:translate3d(0, 5vw, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 5vw, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 5vw, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 5vw, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="card-opportunities"><img src="images/liquidity.png" loading="lazy" width="540" sizes="(max-width: 479px) 47vw, (max-width: 767px) 26vw, (max-width: 991px) 19vw, (max-width: 1279px) 13vw, (max-width: 1439px) 12vw, (max-width: 1919px) 14vw, 10vw" srcset="images/liquidity-p-500.png 500w, images/liquidity-p-800.png 800w, images/liquidity-p-1080.png 1080w, images/liquidity.png 1080w" alt="" class="card-image"><img src="images/ellipses.svg" loading="lazy" width="70" alt="" class="ellipses">
         <div class="txt">
           <h3 class="card-heading">Access To All Liquidity</h3>
-          <p class="content description">DeDeLend consolidates liquidity from multiple markets. You can divide positions between some markets if there isn&#x27;t sufficient liquidity in either one</p>
+          <p class="content description">Sharwa.Finance consolidates liquidity from multiple markets. You can divide positions between some markets if there isn&#x27;t sufficient liquidity in either one</p>
         </div>
         <div class="bottom-container"><img src="images/Line.svg" loading="lazy" width="71" alt="" class="line"><img src="images/steps.svg" loading="lazy" width="29.5" alt="" class="image-steps"></div>
         <div class="grain-overlay bg-card"></div>
@@ -244,7 +240,7 @@
           </div>
           <div class="txt-review">
             <h3 class="review-heading">It’s pretty dope. Stop-loss &amp; Take-profit</h3>
-            <p class="paragraph-review">Really digging DedeLend. It gives me a lot of peace of mind being able to set SL / TP. Also you can use DeDelend to manage your Hegic positions</p>
+            <p class="paragraph-review">Really digging Sharwa.Finance. It gives me a lot of peace of mind being able to set SL / TP. Also you can use Sharwa.Finance to manage your Hegic positions</p>
           </div>
         </div>
         <div style="-webkit-transform:translate3d(0, 5vw, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 5vw, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 5vw, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 5vw, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="slide w-slide">
@@ -255,8 +251,8 @@
             </div><img width="70" loading="lazy" src="images/review-pic2.jpeg" alt="" class="review-photo">
           </div>
           <div class="txt-review">
-            <h3 class="review-heading">DeDeLend is really cool<strong><em>‍</em></strong></h3>
-            <p class="paragraph-review">I was using DeDelend to track my positions on Lyra and Hegic. <strong>@T0xic_Potato</strong> building some great stuff!</p>
+            <h3 class="review-heading">Sharwa.Finance is really cool<strong><em>‍</em></strong></h3>
+            <p class="paragraph-review">I was using Sharwa.Finance to track my positions on Lyra and Hegic. <strong>@T0xic_Potato</strong> building some great stuff!</p>
           </div>
         </div>
         <div style="-webkit-transform:translate3d(0, 5vw, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 5vw, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 5vw, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 5vw, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="slide w-slide">
@@ -296,14 +292,14 @@
         <div role="listitem" class="faq-wrapper w-dyn-item">
           <div data-w-id="14ac175a-5207-3ab2-b0ae-1451c2179979" class="faq-trigger">
             <div class="question">
-              What is DeDeLend?
+              What is Sharwa.Finance?
             </div>
             <div class="faq-button"><img src="images/arrow.svg" loading="lazy" width="11" alt="" class="faq-chevron"></div>
           </div>
           <div class="divider-faq"></div>
           <div style="height:0vw;opacity:0;display:none" class="faq-answer">
             <div class="answer">
-              DeDeLend is an options aggregator that offers a wide range of instruments. Users can effortlessly construct any option strategy and purchase it in a single transaction, as well as set up take-profit or stop-loss orders.
+              Sharwa.Finance is an options aggregator that offers a wide range of instruments. Users can effortlessly construct any option strategy and purchase it in a single transaction, as well as set up take-profit or stop-loss orders.
             </div>
           </div>
         </div>
@@ -317,35 +313,35 @@
           <div class="divider-faq"></div>
           <div style="height:0vw;opacity:0;display:none" class="faq-answer">
             <div class="answer">
-              Our contracts have not been audited. As DeDeLend is currently in its beta phase, we ask that you keep this in mind. We cannot guarantee refunds in the event of lost funds, but if you encounter any issues, please do not hesitate to contact us via Discord or Twitter.
+              Our contracts have not been audited. As Sharwa.Finance is currently in its beta phase, we ask that you keep this in mind. We cannot guarantee refunds in the event of lost funds, but if you encounter any issues, please do not hesitate to contact us via Discord or Twitter.
             </div>
           </div>
         </div>
         <div role="listitem" class="faq-wrapper w-dyn-item">
           <div data-w-id="14ac175a-5207-3ab2-b0ae-1451c2179979" class="faq-trigger">
             <div class="question">
-              What if I have a problem with DeDeLend?
+              What if I have a problem with Sharwa.Finance?
             </div>
             <div class="faq-button"><img src="images/arrow.svg" loading="lazy" width="11" alt="" class="faq-chevron"></div>
           </div>
           <div class="divider-faq"></div>
           <div style="height:0vw;opacity:0;display:none" class="faq-answer">
             <div class="answer">
-              If you encounter any problems with DeDeLend, we encourage you to reach out to us through Discord or Twitter. We value your feedback and are here to assist you.
+              If you encounter any problems with Sharwa.Finance, we encourage you to reach out to us through Discord or Twitter. We value your feedback and are here to assist you.
             </div>
           </div>
         </div>
         <div role="listitem" class="faq-wrapper w-dyn-item">
           <div data-w-id="14ac175a-5207-3ab2-b0ae-1451c2179979" class="faq-trigger">
             <div class="question">
-              Does DeDeLend charge any fees?
+              Does Sharwa.Finance charge any fees?
             </div>
             <div class="faq-button"><img src="images/arrow.svg" loading="lazy" width="11" alt="" class="faq-chevron"></div>
           </div>
           <div class="divider-faq"></div>
           <div style="height:0vw;opacity:0;display:none" class="faq-answer">
             <div class="answer">
-              No, DeDeLend does not charge any additional fees. You will pay the same price for options as you would on the original protocols.
+              No, Sharwa.Finance does not charge any additional fees. You will pay the same price for options as you would on the original protocols.
             </div>
           </div>
         </div>
@@ -362,7 +358,7 @@
   </div>
   <div class="footer wf-section">
     <div class="divider"></div>
-    <a href="https://t.me/DeDeLend" target="_blank" class="link-telegram w-inline-block">
+    <a href="https://t.me/Sharwa.Finance" target="_blank" class="link-telegram w-inline-block">
       <div data-w-id="5ab88794-0b15-37c8-290a-92912dd628a0" class="icon-container for-footer telegram"><img src="images/telegram.svg" loading="lazy" alt="" class="image-icon logo-telegram">
         <div class="grain-overlay-icons"></div>
       </div>
@@ -372,7 +368,7 @@
         <div class="grain-overlay-icons"></div>
       </div>
     </a>
-    <a href="https://twitter.com/DeDeLend" target="_blank" class="link-twitter w-inline-block">
+    <a href="https://twitter.com/SharwaFinance" target="_blank" class="link-twitter w-inline-block">
       <div data-w-id="b475eaa9-e0a4-40c2-bbbc-946e34b9f4d3" class="icon-container for-footer twitter"><img src="images/twitter.svg" loading="lazy" alt="" class="image-icon logo-twitter">
         <div class="grain-overlay-icons"></div>
       </div>
@@ -382,13 +378,8 @@
         <div class="grain-overlay-icons"></div>
       </div>
     </a>
-    <a href="https://docs.dedelend.co/" target="_blank" class="link-gitbook w-inline-block">
+    <a href="https://docs.sharwa.finance/" target="_blank" class="link-gitbook w-inline-block">
       <div data-w-id="6028e2a5-4766-2036-7d1e-b380e2b2fdb1" class="icon-container for-footer"><img src="images/gitbook.svg" loading="lazy" width="10" alt="" class="image-icon logo-mirror">
-        <div class="grain-overlay-icons"></div>
-      </div>
-    </a>
-    <a href="https://medium.com/@dedelend" target="_blank" class="link-medium w-inline-block">
-      <div data-w-id="fdb40235-4727-d634-dce4-64af99d129b9" class="icon-container for-footer"><img src="images/medium.svg" loading="lazy" width="10" alt="" class="image-icon logo-mirror">
         <div class="grain-overlay-icons"></div>
       </div>
     </a>
@@ -396,8 +387,8 @@
       <h1 class="footer-heading">Dive in</h1>
       <h1 class="footer-heading small">Options Aggregator</h1>
     </div>
-    <div class="txt-copyright">@All rights reserved. DeDeLend 2023</div>
-    <a data-w-id="7fbf7d98-aff3-a68f-9d9d-c8c6b625ffbf" href="https://dedelend.co/app.html#/terminal/builder" target="_blank" class="btn-open footer w-inline-block">
+    <div class="txt-copyright">@All rights reserved. Sharwa.Finance 2023</div>
+    <a data-w-id="7fbf7d98-aff3-a68f-9d9d-c8c6b625ffbf" href="https://sharwa.finance/app.html#/terminal/builder" target="_blank" class="btn-open footer w-inline-block">
       <div class="link-btn-txt">Open app</div>
       <div class="link-btn-txt bottom-text">Open app</div>
     </a>
