--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <h1 class="sub-heading">In Unified Trading Terminal</h1>
     </div>
     <div class="grain-overlay"></div>
-    <a data-w-id="f2214f80-6fec-56d0-e975-503eb3989342" href="https://sharwa.finance/app.html#/terminal/builder" target="_blank" class="btn-open w-inline-block">
+    <a data-w-id="f2214f80-6fec-56d0-e975-503eb3989342" href="https://dedelend.co/app.html#/terminal/builder" class="btn-open w-inline-block">
       <div class="link-btn-txt">Open app</div>
       <div class="link-btn-txt bottom-text">Open app</div>
     </a>
@@ -113,7 +113,7 @@
           <div class="point-txt">We believe in full transparency and don&#x27;t charge any additional fee</div>
         </div>
         <div data-w-id="36055265-9b9d-a559-a94d-8c0af07a6bae" class="link-trade">
-          <a href="https://sharwa.finance/app.html#/terminal/builder" target="_blank" class="txt-link">Trade Options</a><img src="images/icon-arrow.svg" loading="lazy" width="70" alt="" class="arrow">
+          <a href="https://dedelend.co/app.html#/terminal/builder" target="_blank" class="txt-link">Trade Options</a><img src="images/icon-arrow.svg" loading="lazy" width="70" alt="" class="arrow">
         </div>
       </div><img src="images/image-aggregator.png" loading="lazy" width="70" sizes="(max-width: 479px) 87vw, (max-width: 767px) 72vw, (max-width: 991px) 59vw, (max-width: 1279px) 48vw, (max-width: 1439px) 53vw, (max-width: 1919px) 49vw, 42vw" srcset="images/image-aggregator-p-500.png 500w, images/image-aggregator-p-800.png 800w, images/image-aggregator-p-1080.png 1080w, images/image-aggregator-p-1600.png 1600w, images/image-aggregator-p-2000.png 2000w, images/image-aggregator-p-2600.png 2600w, images/image-aggregator.png 2720w" alt="" class="image-options">
     </div>
@@ -128,7 +128,7 @@
           <div class="point-txt">Set up a take-profit or stop-loss order</div>
         </div>
         <div data-w-id="0350a095-47e9-8314-8dd1-b58824972399" class="link-trade">
-          <a href="https://sharwa.finance/app.html#/terminal/positions" target="_blank" class="txt-link">Trade Options</a><img src="images/icon-arrow.svg" loading="lazy" width="70" alt="" class="arrow">
+          <a href="https://dedelend.co/app.html#/terminal/positions" target="_blank" class="txt-link">Trade Options</a><img src="images/icon-arrow.svg" loading="lazy" width="70" alt="" class="arrow">
         </div>
       </div><img src="images/fire.svg" loading="lazy" alt="" class="image-fire"><img src="images/take-profit.png" loading="lazy" width="70" sizes="(max-width: 767px) 53vw, (max-width: 991px) 39vw, (max-width: 1279px) 26vw, (max-width: 1439px) 25vw, (max-width: 1919px) 24vw, 18vw" srcset="images/take-profit-p-500.png 500w, images/take-profit.png 680w" alt="" class="image-take-profit"><img src="images/stop-loss.png" loading="lazy" sizes="(max-width: 767px) 53vw, (max-width: 991px) 39vw, (max-width: 1279px) 26vw, (max-width: 1919px) 25vw, 18vw" srcset="images/stop-loss-p-500.png 500w, images/stop-loss.png 680w" alt="" class="image-stop-loss">
     </div>
@@ -143,7 +143,7 @@
           <div class="point-txt">Regardless of where you trade, we compile all data in one place</div>
         </div>
         <div data-w-id="3f234bbc-3a8f-9077-381f-2a2b3c8bd001" class="link-trade user-profile">
-          <a href="https://sharwa.finance/app.html#/terminal/profile" target="_blank" class="txt-link-user-profile">See User Profile</a><img src="images/icon-arrow.svg" loading="lazy" width="70" alt="" class="arrow-user-profile">
+          <a href="https://dedelend.co/app.html#/terminal/profile" target="_blank" class="txt-link-user-profile">See User Profile</a><img src="images/icon-arrow.svg" loading="lazy" width="70" alt="" class="arrow-user-profile">
         </div>
       </div><img src="images/history.png" loading="lazy" width="70" sizes="(max-width: 479px) 87vw, (max-width: 767px) 66vw, (max-width: 991px) 53vw, (max-width: 1279px) 39vw, (max-width: 1439px) 43vw, (max-width: 1919px) 41vw, 35vw" srcset="images/history-p-500.png 500w, images/history-p-800.png 800w, images/history-p-1080.png 1080w, images/history.png 1314w" alt="" class="image-history"><img src="images/history-transaction.png" loading="lazy" width="70" sizes="(max-width: 479px) 87vw, (max-width: 767px) 66vw, (max-width: 991px) 53vw, (max-width: 1279px) 39vw, (max-width: 1439px) 43vw, (max-width: 1919px) 41vw, 35vw" srcset="images/history-transaction-p-500.png 500w, images/history-transaction-p-800.png 800w, images/history-transaction-p-1080.png 1080w, images/history-transaction.png 1330w" alt="" class="image-transaction">
       <div class="transaction-heading">Transaction History</div>
@@ -388,7 +388,7 @@
       <h1 class="footer-heading small">Options Aggregator</h1>
     </div>
     <div class="txt-copyright">@All rights reserved. Sharwa.Finance 2023</div>
-    <a data-w-id="7fbf7d98-aff3-a68f-9d9d-c8c6b625ffbf" href="https://sharwa.finance/app.html#/terminal/builder" target="_blank" class="btn-open footer w-inline-block">
+    <a data-w-id="7fbf7d98-aff3-a68f-9d9d-c8c6b625ffbf" href="https://dedelend.co/app.html#/terminal/builder" target="_blank" class="btn-open footer w-inline-block">
       <div class="link-btn-txt">Open app</div>
       <div class="link-btn-txt bottom-text">Open app</div>
     </a>
